<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_game_run">

    <fragment
        android:id="@+id/nav_game_settings"
        android:name="com.example.life.ui.game.GameSettingsFragment"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/nav_wiki"
        android:name="com.example.life.ui.wiki.WikiFragment"
        android:label="@string/menu_wiki"
        tools:layout="@layout/wiki_fragment" >
        <action
            android:id="@+id/action_wiki_to_about"
            app:destination="@id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_game_run"
        android:name="com.example.life.ui.game.run.GameRunFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/game_run_fragment">
        <action
            android:id="@+id/action_game_run_to_edit"
            app:destination="@id/nav_game_edit" />
        <action
            android:id="@+id/action_game_run_to_settings"
            app:destination="@id/nav_game_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_game_edit"
        android:name="com.example.life.ui.game.edit.GameEditFragment"
        android:label="@string/game_edit_fragment"
        tools:layout="@layout/game_edit_fragment">
        <action
            android:id="@+id/action_game_edit_to_settings"
            app:destination="@id/nav_game_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.life.ui.wiki.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
</navigation>