<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/game_title"
            android:text="@string/about_title" />

        <TextView
            android:id="@+id/about_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/game_subtitle"
            android:text="@string/about_subtitle" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/about_text"
                    style="@style/standard_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text" />

                <TextView
                    android:id="@+id/filler_text"
                    style="@style/standard_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>