<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.HomescreenActivity">

        <ImageView
            android:id="@+id/start_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toTopOf="@+id/game_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/conway"
            android:contentDescription="@string/start_image_description" />

        <TextView
            android:id="@+id/game_title"
            style="@style/game_title"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/game_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_image" />

        <TextView
            android:id="@+id/game_subtitle"
            style="@style/game_subtitle"
            android:text="@string/game_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/button_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_title" />

        <Button
            android:id="@+id/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_game"
            app:layout_constraintBottom_toTopOf="@+id/button_wiki"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_subtitle" />

        <Button
            android:id="@+id/button_wiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_wiki"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_game" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>